DirectWrite
	* Changed TextRenderer into ITextRenderer to allow user implementation.
	* Added Strikethrough and Underline classes