@@ -268,6 +268,9 @@ namespace SlimDX
 			Uniform = DWRITE_LINE_SPACING_METHOD_UNIFORM 
 		};
 
+		/// <summary>
+		/// Specifies the measuring method used for text layout.
+		/// </summary>
 		public enum class MeasuringMode : System::Int32
 		{
 			Natural = DWRITE_MEASURING_MODE_NATURAL,
@@ -354,16 +357,6 @@ namespace SlimDX
 		{
 			Aliased1x1 = DWRITE_TEXTURE_ALIASED_1x1,
 			ClearType3x1 = DWRITE_TEXTURE_CLEARTYPE_3x1
-		};
-
-		/// <summary>
-		/// Specifies the measuring method used for text layout.
-		/// </summary>
-		public enum class MeasuringMethod : System::Int32
-		{
-			Natural = DWRITE_MEASURING_MODE_NATURAL,
-			GdiClassic = DWRITE_MEASURING_MODE_GDI_CLASSIC,
-			GdiNatural = DWRITE_MEASURING_MODE_GDI_NATURAL,
 		};
 
 		/// <summary>
